# ArchitekturBild

./: .dockerignore  .gitignore  AGENTS.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  db.py  main.py  storage.py
docs/: PLAN.md  QA_REPORT.md  RUN_LOCAL.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/lib/: analyzeClient.js
scripts/: README.md  start_mac.sh  stop_linux.sh  stop_mac.sh
