[project]
name = "architekturbild-backend"
version = "0.1.0"
description = "FastAPI backend for ArchitekturBild MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "python-dotenv",
    "python-multipart",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
