[project]
name = "architekturbild-backend"
version = "0.1.0"
description = "FastAPI backend for ArchitekturBild MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "minio",
    "pg8000",
    "pgvector",
    "python-dotenv",
    "python-multipart",
    "sqlalchemy",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
